--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 # Required
-BOT_TOKEN = ""
-API_HASH = ""
-API_ID = ""
-AUTH_CHATS = "" # Separate multiple ids by space and : for topic_ids
+BOT_TOKEN = "6342113383:AAHjIB0upZ0RTPvhRbiI14wKvska4rmI-Zg"
+API_HASH = "6b0afc140b8534c45de9dc77b7d37415"
+API_ID = "28284211"
+AUTH_CHATS = "-1002115179466" # Separate multiple ids by space and : for topic_ids
 
 # Optional
-AUTO_BYPASS = ""
+AUTO_BYPASS = "True"
 OWNER_ID = "" # For personal use & Logs
 LARAVEL_SESSION = ""
 XSRF_TOKEN = ""
