--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ AUTH_CHATS = "-1002115179466" # Separate multiple ids by space and : for topic_i
 
 # Optional
 AUTO_BYPASS = "True"
-OWNER_ID = "" # For personal use & Logs
+OWNER_ID = "5791145987" # For personal use & Logs
 LARAVEL_SESSION = ""
 XSRF_TOKEN = ""
 GDTOT_CRYPT = ""
